<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/img_poster_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster"
                android:src="@color/background"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintTop_toTopOf="@+id/cv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_release"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_genre"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_release"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cv_poster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"/>

        <TextView
            android:id="@+id/text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_value"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:layout_marginStart="34dp"/>

        <TextView
            android:id="@+id/tv_minute_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cv_poster"
            app:layout_constraintStart_toEndOf="@+id/tv_score_value"
            android:layout_marginTop="16dp"
            android:layout_marginStart="52dp"/>

        <TextView
            android:id="@+id/text_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_minute_value"
            app:layout_constraintStart_toEndOf="@+id/text_score"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/btn_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_rounded"
            app:layout_constraintTop_toBottomOf="@+id/cv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintBottom_toBottomOf="@+id/text_score"
            android:text="@string/play"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_score"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/progressBarStyle"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>